[gd_scene load_steps=3 format=3 uid="uid://bt0ytr2vo3k77"]

[ext_resource type="Script" path="res://Menus and Buttons/IngameMenu.gd" id="1_x7npr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vaxm"]
bg_color = Color(0.235294, 0.176471, 0.419608, 1)

[node name="Menu" type="Panel"]
script = ExtResource("1_x7npr")

[node name="NewGameButton" type="Button" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 64.0
offset_right = 440.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 44
theme_override_styles/normal = SubResource("StyleBoxFlat_0vaxm")
text = "New Game"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 224.0
offset_right = 432.0
offset_bottom = 312.0
theme_override_font_sizes/font_size = 44
theme_override_styles/normal = SubResource("StyleBoxFlat_0vaxm")
text = "Quit"

[connection signal="pressed" from="NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="mouse_exited" from="QuitButton" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_pressed"]
